--- a/app/Src/EditScreen1.fx.yaml
+++ b/app/Src/EditScreen1.fx.yaml
@@ -2,10 +2,12 @@ EditScreen1 As screen:
 
     EditForm2 As form:
         DataSource: =TemplateList
-        Height: =425
+        DefaultMode: =FormMode.New
+        Height: =377
+        NumberOfColumns: =1
         Visible: =If(varTabSelected = 2, true, false)
         X: =282
-        Y: =121
+        Y: =168
         ZIndex: =1
 
         Title_DataCard1 As typedDataCard.textualEditCard:
@@ -19,7 +21,7 @@ EditScreen1 As screen:
             MaxLength: =DataSourceInfo([@TemplateList], DataSourceInfo.MaxLength, "Title")
             Required: =true
             Update: =DataCardValue1.Text
-            Width: =266
+            Width: =800
             X: =0
             Y: =0
             ZIndex: =2
@@ -28,10 +30,10 @@ EditScreen1 As screen:
                 AutoHeight: =true
                 Height: =34
                 Text: =Parent.DisplayName
-                Width: =Parent.Width - 60
+                Width: =(Parent.Width - 60) * 0.4
                 Wrap: =false
                 X: =30
-                Y: =10
+                Y: =10 + (DataCardValue1.Height / 2) - (Self.Height / 2)
                 ZIndex: =1
 
             DataCardValue1 As text:
@@ -39,6 +41,7 @@ EditScreen1 As screen:
                 Default: =Parent.Default
                 DelayOutput: =true
                 DisplayMode: =Parent.DisplayMode
+                Height: =38
                 MaxLength: =Parent.MaxLength
                 PaddingLeft: =5
                 RadiusBottomLeft: =0
@@ -46,9 +49,9 @@ EditScreen1 As screen:
                 RadiusTopLeft: =0
                 RadiusTopRight: =0
                 Tooltip: =Parent.DisplayName
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardKey1.Y + DataCardKey1.Height + 5
+                Width: =599
+                X: =170
+                Y: =11
                 ZIndex: =2
 
             ErrorMessage1 As label:
@@ -83,41 +86,24 @@ EditScreen1 As screen:
             DisplayMode: =Parent.DisplayMode
             DisplayName: =DataSourceInfo([@TemplateList],DataSourceInfo.DisplayName,"html")
             Fill: =RGBA(0, 0, 0, 0)
-            Height: =50
+            Height: =293
             MaxLength: =DataSourceInfo([@TemplateList], DataSourceInfo.MaxLength, "html")
             Required: =false
-            Update: =DataCardValue5.Text
-            Width: =266
-            X: =1
-            Y: =0
+            Update: =RichTextEditor1.HtmlText
+            Width: =800
+            X: =0
+            Y: =1
             ZIndex: =2
 
             DataCardKey5 As label:
                 AutoHeight: =true
                 Height: =34
                 Text: =Parent.DisplayName
-                Width: =Parent.Width - 60
+                Width: =148
                 Wrap: =false
                 X: =30
-                Y: =10
+                Y: =10 + (RichTextEditor1.Height / 2) - (Self.Height / 2)
                 ZIndex: =1
-
-            DataCardValue5 As text:
-                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                Default: =Parent.Default
-                DelayOutput: =true
-                DisplayMode: =Parent.DisplayMode
-                MaxLength: =Parent.MaxLength
-                PaddingLeft: =5
-                RadiusBottomLeft: =0
-                RadiusBottomRight: =0
-                RadiusTopLeft: =0
-                RadiusTopRight: =0
-                Tooltip: =Parent.DisplayName
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardKey5.Y + DataCardKey5.Height + 5
-                ZIndex: =2
 
             ErrorMessage5 As label:
                 AutoHeight: =true
@@ -131,7 +117,7 @@ EditScreen1 As screen:
                 Visible: =Parent.DisplayMode=DisplayMode.Edit
                 Width: =Parent.Width - 60
                 X: =30
-                Y: =DataCardValue5.Y + DataCardValue5.Height
+                Y: =RichTextEditor1.Y + RichTextEditor1.Height
                 ZIndex: =3
 
             StarVisible5 As label:
@@ -144,138 +130,13 @@ EditScreen1 As screen:
                 Y: =DataCardKey5.Y
                 ZIndex: =4
 
-        "'Template Title_DataCard1' As typedDataCard.textualEditCard":
-            BorderStyle: =BorderStyle.Solid
-            DataField: ="TemplateTitle"
-            Default: =ThisItem.'Template Title'
-            DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@TemplateList],DataSourceInfo.DisplayName,"TemplateTitle")
-            Fill: =RGBA(0, 0, 0, 0)
-            Height: =50
-            MaxLength: =DataSourceInfo([@TemplateList], DataSourceInfo.MaxLength, "TemplateTitle")
-            Required: =false
-            Update: =DataCardValue6.Text
-            Width: =266
-            X: =2
-            Y: =0
-            ZIndex: =2
-
-            DataCardKey11 As label:
-                AutoHeight: =true
-                Height: =34
-                Text: =Parent.DisplayName
-                Width: =Parent.Width - 60
-                Wrap: =false
-                X: =30
-                Y: =10
-                ZIndex: =1
-
-            DataCardValue6 As text:
-                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                Default: =Parent.Default
-                DelayOutput: =true
-                DisplayMode: =Parent.DisplayMode
-                MaxLength: =Parent.MaxLength
-                PaddingLeft: =5
-                RadiusBottomLeft: =0
-                RadiusBottomRight: =0
-                RadiusTopLeft: =0
-                RadiusTopRight: =0
-                Tooltip: =Parent.DisplayName
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardKey11.Y + DataCardKey11.Height + 5
-                ZIndex: =2
-
-            ErrorMessage7 As label:
-                AutoHeight: =true
-                Height: =10
-                Live: =Live.Assertive
-                PaddingBottom: =0
-                PaddingLeft: =0
-                PaddingRight: =0
-                PaddingTop: =0
-                Text: =Parent.Error
-                Visible: =Parent.DisplayMode=DisplayMode.Edit
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardValue6.Y + DataCardValue6.Height
-                ZIndex: =3
-
-            StarVisible7 As label:
-                Align: =Align.Center
-                Height: =DataCardKey11.Height
-                Text: ="*"
-                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                Width: =30
-                Wrap: =false
-                Y: =DataCardKey11.Y
-                ZIndex: =4
-
-        Attachments_DataCard2 As typedDataCard.attachmentsEditCard:
-            BorderStyle: =BorderStyle.Solid
-            DataField: ="{Attachments}"
-            Default: =ThisItem.Attachments
-            DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@TemplateList],DataSourceInfo.DisplayName,"{Attachments}")
-            Fill: =RGBA(0, 0, 0, 0)
-            Height: =50
-            Required: =false
-            Update: =DataCardValue7.Attachments
-            Width: =266
-            X: =0
-            Y: =1
-            ZIndex: =2
-
-            DataCardKey12 As label:
-                AutoHeight: =true
-                Height: =34
-                Text: =Parent.DisplayName
-                Width: =Parent.Width - 60
-                Wrap: =false
-                X: =30
-                Y: =10
-                ZIndex: =1
-
-            DataCardValue7 As attachments:
-                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                DisplayMode: =Parent.DisplayMode
-                IsInDataCard: =true
-                Items: =Parent.Default
-                PaddingBottom: =5
-                PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
-                PaddingRight: =5
-                PaddingTop: =5
-                Tooltip: =Parent.DisplayName
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardKey12.Y + DataCardKey12.Height + 5
-                ZIndex: =2
-
-            ErrorMessage9 As label:
-                AutoHeight: =true
-                Height: =10
-                Live: =Live.Assertive
-                PaddingBottom: =0
-                PaddingLeft: =0
-                PaddingRight: =0
-                PaddingTop: =0
-                Text: =Parent.Error
-                Visible: =Parent.DisplayMode=DisplayMode.Edit
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardValue7.Y + DataCardValue7.Height
-                ZIndex: =3
-
-            StarVisible9 As label:
-                Align: =Align.Center
-                Height: =DataCardKey12.Height
-                Text: ="*"
-                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                Width: =30
-                Wrap: =false
-                Y: =DataCardKey12.Y
-                ZIndex: =4
+            RichTextEditor1 As richTextEditor:
+                Default: ="Enter some <strong>rich text</strong> here."
+                Height: =236
+                Width: =606
+                X: =165
+                Y: =33
+                ZIndex: =6
 
     EditForm1 As form:
         DataSource: =NewCampaign
@@ -638,7 +499,7 @@ EditScreen1 As screen:
         ZIndex: =3
 
     Button12 As button:
-        OnSelect: =SubmitForm(EditForm1)
+        OnSelect: =If(varTabSelected = 1, SubmitForm(EditForm1), SubmitForm(EditForm2))
         RadiusBottomLeft: =0
         RadiusBottomRight: =0
         RadiusTopLeft: =0
