--- a/app/CanvasManifest.json
+++ b/app/CanvasManifest.json
@@ -112,6 +112,7 @@
     "BrowseScreen1",
     "DetailScreen1",
     "EditScreen1",
-    "SendOutScreen"
+    "SendOutScreen",
+    "PreviewScreen"
   ]
 }
