--- a/app/Src/PreviewScreen.fx.yaml
+++ b/app/Src/PreviewScreen.fx.yaml
@@ -24,6 +24,17 @@ PreviewScreen As screen:
                                             <td align='center' valign='top' style ='color:#A100FF; font-size:30px;'>
                                                 Accenture Song Baltic ATC                                        
                                             </td>
+                                            
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                We are fully equipped to Design & Build
+                                            </td>
+                                        </tr>
+                                         <tr>
+                                            <td>
+                                                We are part of Baltic ATC. Our team are creative dreamers who love to inspire clients all over the world and bring valuable, tailored solutions for the most challenging pains that the future users might have. We create a vision and then build it into reality.  That’s the beauty of it – as one team we make sure no great ideas are lost along the way.
+                                            </td>
                                         </tr>
                                     </table>
                                 </td>
