--- a/app/Src/EditScreen1.fx.yaml
+++ b/app/Src/EditScreen1.fx.yaml
@@ -385,7 +385,7 @@ EditScreen1 As screen:
                 DisplayMode: =Parent.DisplayMode
                 Height: =38
                 IsSearchable: =false
-                Items: =Distinct(CampaignList, Title)
+                Items: =Distinct(TemplateList, Title)
                 OnChange: =Set(ContactsVar, LookUp(CampaignList, Title = DataCardValue4.Selected.Result))
                 PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                 SearchFields: =["Result"]
