--- a/app/Src/EditScreen1.fx.yaml
+++ b/app/Src/EditScreen1.fx.yaml
@@ -140,93 +140,32 @@ EditScreen1 As screen:
                 ZIndex: =6
 
     EditForm1 As form:
-        DataSource: =NewCampaign
+        DataSource: =TemplateList
         Height: =518
         Item: =BrowseGallery1.Selected
         NumberOfColumns: =1
         OnSuccess: =Back()
         Visible: =If(varTabSelected = 1, true, false)
-        Width: =848
-        X: =257
+        Width: =910
+        X: =227
         Y: =131
         ZIndex: =3
-
-        "'Message (html)_DataCard3' As typedDataCard.textualEditCard":
-            BorderStyle: =BorderStyle.Solid
-            DataField: ="Message_x0028_html_x0029_"
-            Default: =ThisItem.'Message (html)'
-            DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@NewCampaign],DataSourceInfo.DisplayName,"Message_x0028_html_x0029_")
-            Fill: =RGBA(0, 0, 0, 0)
-            Height: =281
-            MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Message_x0028_html_x0029_")
-            Required: =false
-            Update: =RichTextEditor4.HtmlText
-            Width: =848
-            X: =0
-            Y: =4
-            ZIndex: =1
-
-            DataCardKey6 As label:
-                AutoHeight: =true
-                Height: =34
-                Text: =Parent.DisplayName
-                Width: =(Parent.Width - 60) * 0.4
-                Wrap: =false
-                X: =30
-                Y: =10 + (RichTextEditor4.Height / 2) - (Self.Height / 2)
-                ZIndex: =1
-
-            ErrorMessage6 As label:
-                AutoHeight: =true
-                Height: =10
-                Live: =Live.Assertive
-                PaddingBottom: =0
-                PaddingLeft: =0
-                PaddingRight: =0
-                PaddingTop: =0
-                Text: =Parent.Error
-                Visible: =Parent.DisplayMode=DisplayMode.Edit
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =RichTextEditor4.Y + RichTextEditor4.Height
-                ZIndex: =3
-
-            StarVisible6 As label:
-                Align: =Align.Center
-                Height: =DataCardKey6.Height
-                Text: ="*"
-                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                Width: =30
-                Wrap: =false
-                Y: =DataCardKey6.Y
-                ZIndex: =4
-
-            RichTextEditor4 As richTextEditor:
-                Default: |-
-                    =$"Hello {ContactsVar.'Role Fulfillment Contact'}!<br></br>
-                    My name is {ContactsVar.'Role Primary Contact'}. Writing you regarding Open role {ContactsVar.Title} for {ContactsVar.Project}.<br></br>Let me know if this role is still open, will be happy to jump on a call to discuss potential candidates."
-                Height: =236
-                Width: =593
-                X: =225
-                Y: =20
-                ZIndex: =5
 
         Title_DataCard2 As typedDataCard.textualEditCard:
             BorderStyle: =BorderStyle.Solid
             DataField: ="Title"
             Default: =ThisItem.Title
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@NewCampaign],DataSourceInfo.DisplayName,"Title")
+            DisplayName: =DataSourceInfo([@TemplateList],DataSourceInfo.DisplayName,"Title")
             Fill: =RGBA(0, 0, 0, 0)
             Height: =50
-            MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Title")
-            Required: =false
+            MaxLength: =DataSourceInfo([@TemplateList], DataSourceInfo.MaxLength, "Title")
+            Required: =true
             Update: =DataCardValue2.Text
-            Width: =848
+            Width: =910
             X: =0
             Y: =0
-            ZIndex: =2
+            ZIndex: =4
 
             DataCardKey2 As label:
                 AutoHeight: =true
@@ -251,8 +190,8 @@ EditScreen1 As screen:
                 RadiusTopLeft: =0
                 RadiusTopRight: =0
                 Tooltip: =Parent.DisplayName
-                Width: =596
-                X: =221
+                Width: =614
+                X: =202
                 Y: =11
                 ZIndex: =2
 
@@ -281,92 +220,21 @@ EditScreen1 As screen:
                 Y: =DataCardKey2.Y
                 ZIndex: =4
 
-        Subject_DataCard1 As typedDataCard.textualEditCard:
+        "'Template Title_DataCard1' As typedDataCard.textualEditCard":
             BorderStyle: =BorderStyle.Solid
-            DataField: ="Subject"
-            Default: =ThisItem.Subject
+            DataField: ="TemplateTitle"
+            Default: =ThisItem.'Template Title'
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@NewCampaign],DataSourceInfo.DisplayName,"Subject")
+            DisplayName: =DataSourceInfo([@TemplateList],DataSourceInfo.DisplayName,"TemplateTitle")
             Fill: =RGBA(0, 0, 0, 0)
             Height: =50
-            MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Subject")
+            MaxLength: =DataSourceInfo([@TemplateList], DataSourceInfo.MaxLength, "TemplateTitle")
             Required: =false
-            Update: =DataCardValue3.Text
-            Visible: =true
-            Width: =848
+            Update: =DataCardValue4.Text
+            Width: =910
             X: =0
             Y: =1
-            ZIndex: =2
-
-            DataCardKey3 As label:
-                AutoHeight: =true
-                Height: =34
-                Text: =Parent.DisplayName
-                Width: =(Parent.Width - 60) * 0.4
-                Wrap: =false
-                X: =30
-                Y: =10 + (DataCardValue3.Height / 2) - (Self.Height / 2)
-                ZIndex: =1
-
-            DataCardValue3 As text:
-                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                Default: =
-                DelayOutput: =true
-                DisplayMode: =Parent.DisplayMode
-                Height: =38
-                HintText: ="Support From Baltic Song for <Client Name>"
-                MaxLength: =Parent.MaxLength
-                PaddingLeft: =5
-                RadiusBottomLeft: =0
-                RadiusBottomRight: =0
-                RadiusTopLeft: =0
-                RadiusTopRight: =0
-                Tooltip: =Parent.DisplayName
-                Width: =594
-                X: =223
-                Y: =11
-                ZIndex: =2
-
-            ErrorMessage3 As label:
-                AutoHeight: =true
-                Height: =10
-                Live: =Live.Assertive
-                PaddingBottom: =0
-                PaddingLeft: =0
-                PaddingRight: =0
-                PaddingTop: =0
-                Text: =Parent.Error
-                Visible: =Parent.DisplayMode=DisplayMode.Edit
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardValue3.Y + DataCardValue3.Height
-                ZIndex: =3
-
-            StarVisible3 As label:
-                Align: =Align.Center
-                Height: =DataCardKey3.Height
-                Text: ="*"
-                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                Width: =30
-                Wrap: =false
-                Y: =DataCardKey3.Y
-                ZIndex: =4
-
-        Template_DataCard1 As typedDataCard.comboBoxEditCard:
-            BorderStyle: =BorderStyle.Solid
-            DataField: ="Template"
-            Default: =ThisItem.Template
-            DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@NewCampaign],DataSourceInfo.DisplayName,"Template")
-            Fill: =RGBA(0, 0, 0, 0)
-            Height: =50
-            Required: =false
-            Update: =DataCardValue4.Selected
-            Visible: =true
-            Width: =848
-            X: =0
-            Y: =2
-            ZIndex: =2
+            ZIndex: =4
 
             DataCardKey4 As label:
                 AutoHeight: =true
@@ -378,23 +246,22 @@ EditScreen1 As screen:
                 Y: =10 + (DataCardValue4.Height / 2) - (Self.Height / 2)
                 ZIndex: =1
 
-            DataCardValue4 As combobox:
+            DataCardValue4 As text:
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                DefaultSelectedItems: =Parent.Default
-                DisplayFields: =["Result"]
+                Default: =Parent.Default
+                DelayOutput: =true
                 DisplayMode: =Parent.DisplayMode
-                Height: =38
-                IsSearchable: =false
-                Items: =Distinct(TemplateList, Title)
-                OnChange: =Set(ContactsVar, LookUp(CampaignList, Title = DataCardValue4.Selected.Result))
-                PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
-                SearchFields: =["Result"]
-                SearchItems: =[]
-                SelectMultiple: =false
+                Height: =37
+                MaxLength: =Parent.MaxLength
+                PaddingLeft: =5
+                RadiusBottomLeft: =0
+                RadiusBottomRight: =0
+                RadiusTopLeft: =0
+                RadiusTopRight: =0
                 Tooltip: =Parent.DisplayName
-                Width: =596
-                X: =221
-                Y: =11
+                Width: =601
+                X: =214
+                Y: =12
                 ZIndex: =2
 
             ErrorMessage4 As label:
@@ -427,30 +294,30 @@ EditScreen1 As screen:
             DataField: ="{Attachments}"
             Default: =ThisItem.Attachments
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@NewCampaign],DataSourceInfo.DisplayName,"{Attachments}")
+            DisplayName: =DataSourceInfo([@TemplateList],DataSourceInfo.DisplayName,"{Attachments}")
             Fill: =RGBA(0, 0, 0, 0)
-            Height: =50
+            Height: =146
             Required: =false
-            Update: =DataCardValue8.Attachments
-            Visible: =true
-            Width: =848
+            Update: =DataCardValue5.Attachments
+            Width: =910
             X: =0
-            Y: =3
-            ZIndex: =2
+            Y: =2
+            ZIndex: =4
 
-            DataCardKey8 As label:
-                Height: =18
+            DataCardKey6 As label:
+                AutoHeight: =true
+                Height: =34
                 Text: =Parent.DisplayName
                 Width: =(Parent.Width - 60) * 0.4
                 Wrap: =false
                 X: =30
-                Y: =10 + (DataCardValue8.Height / 2) - (Self.Height / 2)
+                Y: =10 + (DataCardValue5.Height / 2) - (Self.Height / 2)
                 ZIndex: =1
 
-            DataCardValue8 As attachments:
+            DataCardValue5 As attachments:
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                 DisplayMode: =Parent.DisplayMode
-                Height: =100
+                Height: =99
                 IsInDataCard: =true
                 Items: =Parent.Default
                 PaddingBottom: =5
@@ -458,12 +325,12 @@ EditScreen1 As screen:
                 PaddingRight: =5
                 PaddingTop: =5
                 Tooltip: =Parent.DisplayName
-                Width: =588
-                X: =228
-                Y: =9
+                Width: =583
+                X: =232
+                Y: =10
                 ZIndex: =2
 
-            ErrorMessage8 As label:
+            ErrorMessage6 As label:
                 AutoHeight: =true
                 Height: =10
                 Live: =Live.Assertive
@@ -475,18 +342,77 @@ EditScreen1 As screen:
                 Visible: =Parent.DisplayMode=DisplayMode.Edit
                 Width: =Parent.Width - 60
                 X: =30
-                Y: =DataCardValue8.Y + DataCardValue8.Height
+                Y: =DataCardValue5.Y + DataCardValue5.Height
                 ZIndex: =3
 
-            StarVisible8 As label:
+            StarVisible6 As label:
                 Align: =Align.Center
-                Height: =DataCardKey8.Height
+                Height: =DataCardKey6.Height
                 Text: ="*"
                 Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
                 Width: =30
                 Wrap: =false
-                Y: =DataCardKey8.Y
+                Y: =DataCardKey6.Y
                 ZIndex: =4
+
+        "'html _DataCard2' As typedDataCard.textualEditCard":
+            BorderStyle: =BorderStyle.Solid
+            DataField: ="html"
+            Default: =ThisItem.'html '
+            DisplayMode: =Parent.DisplayMode
+            DisplayName: =DataSourceInfo([@TemplateList],DataSourceInfo.DisplayName,"html")
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =251
+            MaxLength: =DataSourceInfo([@TemplateList], DataSourceInfo.MaxLength, "html")
+            Required: =false
+            Update: =RichTextEditor3.HtmlText
+            Width: =910
+            X: =0
+            Y: =3
+            ZIndex: =4
+
+            DataCardKey3 As label:
+                AutoHeight: =true
+                Height: =34
+                Text: =Parent.DisplayName
+                Width: =(Parent.Width - 60) * 0.4
+                Wrap: =false
+                X: =30
+                Y: =10 + (RichTextEditor3.Height / 2) - (Self.Height / 2)
+                ZIndex: =1
+
+            ErrorMessage3 As label:
+                AutoHeight: =true
+                Height: =10
+                Live: =Live.Assertive
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =Parent.Error
+                Visible: =Parent.DisplayMode=DisplayMode.Edit
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =RichTextEditor3.Y + RichTextEditor3.Height
+                ZIndex: =3
+
+            StarVisible3 As label:
+                Align: =Align.Center
+                Height: =DataCardKey3.Height
+                Text: ="*"
+                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                Width: =30
+                Wrap: =false
+                Y: =DataCardKey3.Y
+                ZIndex: =4
+
+            RichTextEditor3 As richTextEditor:
+                Default: =BrowseGallery1.Selected.'html '
+                Height: =215
+                Width: =639
+                X: =180
+                Y: =10
+                ZIndex: =5
 
     Button11 As button:
         OnSelect: =Navigate(PreviewCampaign);
