--- a/app/Src/PreviewCampaign.fx.yaml
+++ b/app/Src/PreviewCampaign.fx.yaml
@@ -1,4 +1,6 @@
 PreviewCampaign As screen:
+    OnVisible: |-
+        =UpdateContext({varShowPopup: false})
 
     EditForm1_1 As form:
         DataSource: =NewCampaign
@@ -373,10 +375,75 @@ PreviewCampaign As screen:
 
     Label7_2 As label:
         FontWeight: =FontWeight.Bold
+        Height: =37
         Size: =24
         Text: ="Preview Campaign"
-        Width: =401
-        X: =549
+        Width: =351
+        X: =599
         Y: =64
         ZIndex: =6
+
+    Icon4_1 As icon.Send:
+        Color: =RGBA(56, 96, 178, 1)
+        Height: =50
+        Icon: =Icon.Send
+        OnSelect: |-
+            =UpdateContext({varShowPopup: true})
+        Width: =46
+        X: =1059
+        Y: =64
+        ZIndex: =7
+
+    DeletePopup_1 As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =12
+
+        Rectangle1_2 As rectangle:
+            Fill: =RGBA(204, 231, 246, 1)
+            Height: =308
+            Visible: =varShowPopup = true
+            Width: =726
+            X: =379
+            Y: =184
+            ZIndex: =8
+
+        Button8_2 As button:
+            Fill: =RGBA(0, 134, 208, 1)
+            OnSelect: |-
+                =UpdateContext({varShowPopup:false}); Navigate(PreviewScreen);
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Cancel"
+            Visible: =varShowPopup = true
+            X: =754
+            Y: =410
+            ZIndex: =9
+
+        Button7_2 As button:
+            Fill: =RGBA(0, 134, 208, 1)
+            OnSelect: |-
+                =UpdateContext({varShowPopup:false}); Remove([@TemplateList], BrowseGallery1.Selected); If (IsEmpty(Errors([@TemplateList], BrowseGallery1.Selected)), Back())
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Send"
+            Visible: =varShowPopup = true
+            X: =554
+            Y: =410
+            ZIndex: =10
+
+        Label8_1 As label:
+            Height: =101
+            Text: ="Are you sure you want to send email to all recipients?"
+            Visible: =varShowPopup = true
+            Width: =311
+            X: =577
+            Y: =252
+            ZIndex: =11
 
