--- a/app/Src/BrowseScreen1.fx.yaml
+++ b/app/Src/BrowseScreen1.fx.yaml
@@ -5,6 +5,7 @@ BrowseScreen1 As screen:
         Color: =RGBA(56, 96, 178, 1)
         Height: =54
         Icon: =Icon.Reload
+        OnSelect: =Refresh([@TemplateList])
         Width: =41
         X: =819
         Y: =38
