--- a/app/CanvasManifest.json
+++ b/app/CanvasManifest.json
@@ -108,11 +108,11 @@
     "UserLocale": "en-US"
   },
   "ScreenOrder": [
-    "SendButton",
     "BrowseScreen1",
     "EditScreen1",
     "PreviewCampaign",
     "SendOutScreen",
-    "PreviewScreen"
+    "PreviewScreen",
+    "SendButton"
   ]
 }
