--- a/app/Src/EditScreen1.fx.yaml
+++ b/app/Src/EditScreen1.fx.yaml
@@ -1,153 +1,12 @@
 EditScreen1 As screen:
     OnVisible: =
 
-    EditForm2 As form:
-        DataSource: =TemplateList
-        DefaultMode: =FormMode.New
-        Height: =377
-        NumberOfColumns: =1
-        OnSuccess: =ResetForm(EditForm2); NewForm(EditForm2); Navigate(BrowseScreen1);
-        Visible: =If(varTabSelected = 2, true, false)
-        X: =282
-        Y: =168
-        ZIndex: =2
-
-        Title_DataCard1 As typedDataCard.textualEditCard:
-            BorderStyle: =BorderStyle.Solid
-            DataField: ="Title"
-            Default: =ThisItem.Title
-            DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@TemplateList],DataSourceInfo.DisplayName,"Title")
-            Fill: =RGBA(0, 0, 0, 0)
-            Height: =50
-            MaxLength: =DataSourceInfo([@TemplateList], DataSourceInfo.MaxLength, "Title")
-            Required: =true
-            Update: =DataCardValue1.Text
-            Width: =800
-            X: =0
-            Y: =0
-            ZIndex: =2
-
-            DataCardKey1 As label:
-                AutoHeight: =true
-                Height: =34
-                Text: =Parent.DisplayName
-                Width: =(Parent.Width - 60) * 0.4
-                Wrap: =false
-                X: =30
-                Y: =10 + (DataCardValue1.Height / 2) - (Self.Height / 2)
-                ZIndex: =1
-
-            DataCardValue1 As text:
-                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                Default: =Parent.Default
-                DelayOutput: =true
-                DisplayMode: =Parent.DisplayMode
-                Height: =38
-                MaxLength: =Parent.MaxLength
-                PaddingLeft: =5
-                RadiusBottomLeft: =0
-                RadiusBottomRight: =0
-                RadiusTopLeft: =0
-                RadiusTopRight: =0
-                Tooltip: =Parent.DisplayName
-                Width: =599
-                X: =170
-                Y: =11
-                ZIndex: =2
-
-            ErrorMessage1 As label:
-                AutoHeight: =true
-                Height: =10
-                Live: =Live.Assertive
-                PaddingBottom: =0
-                PaddingLeft: =0
-                PaddingRight: =0
-                PaddingTop: =0
-                Text: =Parent.Error
-                Visible: =Parent.DisplayMode=DisplayMode.Edit
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardValue1.Y + DataCardValue1.Height
-                ZIndex: =3
-
-            StarVisible1 As label:
-                Align: =Align.Center
-                Height: =DataCardKey1.Height
-                Text: ="*"
-                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                Width: =30
-                Wrap: =false
-                Y: =DataCardKey1.Y
-                ZIndex: =4
-
-        "'html _DataCard1' As typedDataCard.textualEditCard":
-            BorderStyle: =BorderStyle.Solid
-            DataField: ="html"
-            Default: =ThisItem.'html '
-            DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@TemplateList],DataSourceInfo.DisplayName,"html")
-            Fill: =RGBA(0, 0, 0, 0)
-            Height: =293
-            MaxLength: =DataSourceInfo([@TemplateList], DataSourceInfo.MaxLength, "html")
-            Required: =false
-            Update: =RichTextEditor1.HtmlText
-            Width: =800
-            X: =0
-            Y: =1
-            ZIndex: =2
-
-            DataCardKey5 As label:
-                AutoHeight: =true
-                Height: =34
-                Text: =Parent.DisplayName
-                Width: =148
-                Wrap: =false
-                X: =30
-                Y: =10 + (RichTextEditor1.Height / 2) - (Self.Height / 2)
-                ZIndex: =1
-
-            ErrorMessage5 As label:
-                AutoHeight: =true
-                Height: =10
-                Live: =Live.Assertive
-                PaddingBottom: =0
-                PaddingLeft: =0
-                PaddingRight: =0
-                PaddingTop: =0
-                Text: =Parent.Error
-                Visible: =Parent.DisplayMode=DisplayMode.Edit
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =RichTextEditor1.Y + RichTextEditor1.Height
-                ZIndex: =3
-
-            StarVisible5 As label:
-                Align: =Align.Center
-                Height: =DataCardKey5.Height
-                Text: ="*"
-                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                Width: =30
-                Wrap: =false
-                Y: =DataCardKey5.Y
-                ZIndex: =4
-
-            RichTextEditor1 As richTextEditor:
-                Default: ="Enter some <strong>rich text</strong> here."
-                Height: =236
-                Width: =606
-                X: =165
-                Y: =33
-                ZIndex: =6
-
     EditForm1 As form:
         DataSource: =TemplateList
-        DefaultMode: =FormMode.New
         Height: =556
         Item: =BrowseGallery1.Selected
         NumberOfColumns: =1
         OnSuccess: =Back()
-        Visible: =If(varTabSelected = 1, true, false)
         Width: =910
         X: =227
         Y: =92
@@ -776,7 +635,7 @@ EditScreen1 As screen:
                 ZIndex: =6
 
     Button11 As button:
-        OnSelect: =Navigate(PreviewCampaign);
+        OnSelect: =DisplayMode.Edit
         RadiusBottomLeft: =0
         RadiusBottomRight: =0
         RadiusTopLeft: =0
@@ -787,7 +646,7 @@ EditScreen1 As screen:
         ZIndex: =4
 
     Button12 As button:
-        OnSelect: =If(varTabSelected = 1, SubmitForm(EditForm1), SubmitForm(EditForm2)); 
+        OnSelect: =SubmitForm(EditForm1);
         RadiusBottomLeft: =0
         RadiusBottomRight: =0
         RadiusTopLeft: =0
