--- a/app/Src/PreviewCampaign.fx.yaml
+++ b/app/Src/PreviewCampaign.fx.yaml
@@ -69,7 +69,7 @@ PreviewCampaign As screen:
                     =$"Hello {ContactsVar.'Role Fulfillment Contact'}!<br></br>
                     My name is {ContactsVar.'Role Primary Contact'}. Writing you regarding Open role {ContactsVar.Title} for {ContactsVar.Project}.<br></br>Let me know if this role is still open, will be happy to jump on a call to discuss potential candidates."
                 Height: =212
-                Width: =846
+                Width: =853
                 X: =192
                 Y: =20
                 ZIndex: =5
@@ -185,7 +185,7 @@ PreviewCampaign As screen:
                 SearchItems: =[]
                 SelectMultiple: =false
                 Tooltip: =Parent.DisplayName
-                Width: =849
+                Width: =856
                 X: =189
                 Y: =11
                 ZIndex: =2
@@ -252,30 +252,33 @@ PreviewCampaign As screen:
         ZIndex: =12
 
         Rectangle1_2 As rectangle:
-            Fill: =RGBA(204, 231, 246, 1)
-            Height: =308
+            Fill: =RGBA(56, 96, 178, 0.7)
+            Height: =338
             Visible: =varShowPopup = true
-            Width: =726
-            X: =379
-            Y: =184
+            Width: =860
+            X: =240
+            Y: =90
             ZIndex: =8
 
         Button8_2 As button:
             Fill: =RGBA(0, 134, 208, 1)
+            Height: =44
             OnSelect: |-
-                =UpdateContext({varShowPopup:false}); Navigate(PreviewScreen);
+                =UpdateContext({varShowPopup:false}); Navigate(PreviewCampaign);
             RadiusBottomLeft: =0
             RadiusBottomRight: =0
             RadiusTopLeft: =0
             RadiusTopRight: =0
             Text: ="Cancel"
             Visible: =varShowPopup = true
-            X: =754
-            Y: =410
+            Width: =190
+            X: =685
+            Y: =338
             ZIndex: =9
 
         Button7_2 As button:
             Fill: =RGBA(0, 134, 208, 1)
+            Height: =44
             OnSelect: |-
                 =UpdateContext({varShowPopup:false}); Remove([@TemplateList], BrowseGallery1.Selected); If (IsEmpty(Errors([@TemplateList], BrowseGallery1.Selected)), Back())
             RadiusBottomLeft: =0
@@ -284,17 +287,21 @@ PreviewCampaign As screen:
             RadiusTopRight: =0
             Text: ="Send"
             Visible: =varShowPopup = true
-            X: =554
-            Y: =410
+            Width: =190
+            X: =447
+            Y: =338
             ZIndex: =10
 
         Label8_1 As label:
-            Height: =101
+            Align: =Align.Center
+            Color: =RGBA(255, 255, 255, 1)
+            Height: =108
+            Size: =15
             Text: ="Are you sure you want to send email to all recipients?"
             Visible: =varShowPopup = true
-            Width: =311
-            X: =577
-            Y: =252
+            Width: =369
+            X: =480
+            Y: =173
             ZIndex: =11
 
     HtmlText1_2 As htmlViewer:
